--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -87,7 +87,7 @@
     year         = {2019}
 }
 
-% MOJE
+% TU START
 
 
 
@@ -415,13 +415,6 @@
 	urldate = {2025-04-26}
 }
 
-@misc{kubelinter,
-	title = {Dokumentacja skanera {Kubelinter}},
-	url = {https://docs.kubelinter.io/},
-	language = {en},
-	urldate = {2025-04-26}
-}
-
 @misc{terrascan,
 	title = {Dokumentacja skanera {Terrascan}},
 	url = {https://runterrascan.io/docs/},
@@ -451,4 +444,195 @@
 	note = {arXiv:1706.03762 [cs]},
 	keywords = {Computer Science - Computation and Language, Computer Science - Machine Learning},
 	annote = {Comment: 15 pages, 5 figures},
+}
+
+@misc{gpt41,
+  title        = {GPT‑4.1},
+  author       = {OpenAI},
+  url          = {https://openai.com/index/gpt-4-1/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{o3,
+  title        = {o3},
+  author       = {OpenAI},
+  url          = {https://openai.com/index/introducing-o3-and-o4-mini/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{claude_opus4,
+  title        = {Claude Opus 4},
+  author       = {Anthropic},
+  url          = {https://www.anthropic.com/claude/opus},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{claude_sonnet4,
+  title        = {Claude Sonnet 4},
+  author       = {Anthropic},
+  url          = {https://www.anthropic.com/claude/sonnet},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{gemini25_pro,
+  title        = {Gemini 2.5 Pro},
+  author       = {Google},
+  url          = {https://blog.google/technology/google-deepmind/gemini-model-thinking-updates-march-2025/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{gemini25_flash,
+  title        = {Gemini 2.5 Flash},
+  author       = {Google},
+  url          = {https://developers.googleblog.com/en/start-building-with-gemini-25-flash/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{mistral_medium_3,
+  title        = {Mistral Medium 3},
+  author       = {Mistral AI},
+  url          = {https://mistral.ai/news/mistral-medium-3},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{codestral,
+  title        = {Codestral},
+  author       = {Mistral AI},
+  url          = {https://mistral.ai/news/codestral},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{llama4,
+  title        = {Llama 4 (Scout i Maverick)},
+  author       = {Meta},
+  url          = {https://www.llama.com/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{deepseek_v3,
+  title        = {DeepSeek V3},
+  author       = {DeepSeek AI},
+  url          = {https://api-docs.deepseek.com/news/news1226},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{hadolint,
+  title        = {Hadolint: Narzędzie do analizy statycznej plików Dockerfile},
+  author       = {Kristina Devochko et al.},
+  url          = {https://github.com/hadolint/hadolint},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{kubelinter,
+  title        = {KubeLinter: Narzędzie do analizy statycznej manifestów Kubernetes},
+  author       = {StackRox},
+  url          = {https://github.com/stackrox/kube-linter},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{docker_desktop,
+  title        = {Docker Desktop},
+  author       = {Docker, Inc.},
+  url          = {https://docs.docker.com/desktop/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{kind,
+  title        = {Kind: Kubernetes w Docker},
+  url          = {https://kind.sigs.k8s.io/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{langchain,
+  title        = {LangChain: framework do tworzenia aplikacji LLM},
+  url          = {https://python.langchain.com/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{langgraph,
+  title        = {LangGraph: framework do tworzenia agentów LLM},
+  url          = {https://langchain-ai.github.io/langgraph/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{docker_sdk_python,
+  title        = {Docker SDK dla Pythona},
+  url          = {https://docker-py.readthedocs.io/en/stable/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{kubernetes_sdk_python,
+  title        = {Kubernetes SDK dla Pythona},
+  url          = {https://github.com/kubernetes-client/python},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{pydantic,
+  title        = {Pydantic: Biblioteka do walidacji danych i parsowania JSON},
+  url          = {https://pydantic-docs.helpmanual.io/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{openrouter,
+  title        = {OpenRouter: pośrednik API dla modeli LLM},
+  howpublished = {API gateway dla LLM},
+  url          = {https://openrouter.ai/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{langsmith,
+  title        = {LangSmith: narzędzie do monitorowania i debugowania aplikacji LLM},
+  howpublished = {prompt engineering toolkit},
+  url          = {https://docs.smith.langchain.com/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+@misc{lens_ide,
+  title        = {Lens IDE: zintegrowane środowisko programistyczne dla aplikacji LLM/Kubernetes},
+  howpublished = {IDE dla Kubernetes},
+  url          = {https://docs.k8slens.dev/},
+  language     = {en},
+  urldate      = {2025-06-10}
+}
+
+
+@article{masoudnia_mixture_2014,
+	title = {Mixture of experts: a literature survey},
+	volume = {42},
+	copyright = {http://www.springer.com/tdm},
+	issn = {0269-2821, 1573-7462},
+	shorttitle = {Mixture of experts},
+	url = {http://link.springer.com/10.1007/s10462-012-9338-y},
+	doi = {10.1007/s10462-012-9338-y},
+	abstract = {Mixture of experts (ME) is one of the most popular and interesting combining methods, which has great potential to improve performance in machine learning. ME is established based on the divide-and-conquer principle in which the problem space is divided between a few neural network experts, supervised by a gating network. In earlier works on ME, different strategies were developed to divide the problem space between the experts. To survey and analyse these methods more clearly, we present a categorisation of the ME literature based on this difference. Various ME implementations were classiﬁed into two groups, according to the partitioning strategies used and both how and when the gating network is involved in the partitioning and combining procedures. In the ﬁrst group, The conventional ME and the extensions of this method stochastically partition the problem space into a number of subspaces using a special employed error function, and experts become specialised in each subspace. In the second group, the problem space is explicitly partitioned by the clustering method before the experts’ training process starts, and each expert is then assigned to one of these sub-spaces. Based on the implicit problem space partitioning using a tacit competitive process between the experts, we call the ﬁrst group the mixture of implicitly localised experts (MILE), and the second group is called mixture of explicitly localised experts (MELE), as it uses pre-speciﬁed clusters. The properties of both groups are investigated in comparison with each other. Investigation of MILE versus MELE, discussing the advantages and disadvantages of each group, showed that the two approaches have complementary features. Moreover, the features of the ME method are compared with other popular combining methods, including boosting and negative correlation learning methods. As the investigated methods have complementary strengths and limitations, previous researches that attempted to combine their features in integrated approaches are reviewed and, moreover, some suggestions are proposed for future research directions.},
+	language = {en},
+	number = {2},
+	urldate = {2025-06-10},
+	journal = {Artificial Intelligence Review},
+	author = {Masoudnia, Saeed and Ebrahimpour, Reza},
+	month = aug,
+	year = {2014},
+	pages = {275--293},
+	file = {PDF:/Users/rasztabigab/Zotero/storage/9LWMHU3H/Masoudnia and Ebrahimpour - 2014 - Mixture of experts a literature survey.pdf:application/pdf},
 }
