--- a/docs/tex/1-wprowadzenie.tex
+++ b/docs/tex/1-wprowadzenie.tex
@@ -19,7 +19,7 @@ Praca ma charakter badawczo-prototypowy i obejmuje następujące zagadnienia:
 
 \subsection{Motywacja}
 
-Motywacja pracy wynika z kilku kluczowych czynników. Po pierwsze, rośnie znaczenie metodyk DevOps oraz automatyzacji zarządzania infrastrukturą. Infrastructure as Code (IaC) umożliwia spójną, powtarzalną konfigurację środowisk i redukcję błędów ludzkich \cite{low_repairing_2024}. Jednak ręczne tworzenie skryptów IaC dla złożonych środowisk chmurowych jest czasochłonne i wymaga specjalistycznej wiedzy. Rozwój dużych modeli językowych (LLM) stwarza możliwość automatycznego generowania kodu konfiguracyjnego na podstawie opisów w języku naturalnym, co może obniżyć barierę wejścia dla mniej doświadczonych programistów i przyspieszyć procesy wdrożeniowe \cite{hu_llm-based_2025}.
+Motywacja pracy wynika z kilku kluczowych czynników. Po pierwsze, rośnie znaczenie metodyk DevOps oraz automatyzacji zarządzania infrastrukturą. IaC umożliwia spójną, powtarzalną konfigurację środowisk i redukcję błędów ludzkich \cite{low_repairing_2024}. Jednak ręczne tworzenie skryptów IaC dla złożonych środowisk chmurowych jest czasochłonne i wymaga specjalistycznej wiedzy. Rozwój dużych modeli językowych (LLM) stwarza możliwość automatycznego generowania kodu konfiguracyjnego na podstawie opisów w języku naturalnym, co może obniżyć barierę wejścia dla mniej doświadczonych programistów i przyspieszyć procesy wdrożeniowe \cite{hu_llm-based_2025}.
 
 Jednocześnie automatyzacja generowania IaC rodzi pytania o poprawność i bezpieczeństwo tworzonych konfiguracji. Modele językowe mogą popełniać błędy lub „halucynować”, generując nieistniejące lub niezalecane elementy konfiguracji \cite{malul_genkubesec_2024}. Istotne jest więc zbadanie wiarygodności LLM w kontekście infrastruktury krytycznej oraz zgodności generowanych plików z najlepszymi praktykami bezpieczeństwa. Automatyzacja tego procesu ma również praktyczne znaczenie w platformach typu PaaS, gdzie może znacząco skrócić czas wdrażania aplikacji oraz poprawić niezawodność i bezpieczeństwo świadczonych usług.
 
