--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -133,7 +133,7 @@ Opisane ryzyka podkreślają konieczność uzupełnienia procesu integracji LLM 
 
 \subsection{Wyzwania i ograniczenia}
 
-Na podstawie przeglądu literatury można stwierdzić, że zastosowanie dużych modeli językowych w dziedzinie Infrastructure as Code niesie ze sobą znaczące korzyści, ale także wiąże się z istotnymi wyzwaniami. Do głównych zalet zaliczymy:
+Na podstawie przeglądu literatury można stwierdzić, że zastosowanie dużych modeli językowych w dziedzinie IaC niesie ze sobą znaczące korzyści, ale także wiąże się z istotnymi wyzwaniami. Do głównych zalet zaliczymy:
 
 \textbf{Automatyzacja i oszczędność czasu:} LLM są w stanie automatycznie wygenerować znaczną część kodu konfiguracyjnego, począwszy od definicji obrazu Docker, po złożone manifesty Kubernetes. Umożliwia to przyspieszenie wdrożeń – konfiguracje, które normalnie zajęłyby godziny ręcznego pisania i debugowania, mogą zostać uzyskane w ciągu minut. Przykładowo, projekt Repo2Run pokazał, że LLM może samodzielnie przygotować Dockerfile dla skomplikowanego projektu, eliminując dziesiątki potencjalnych kroków manualnych \cite{hu_llm-based_2025}. Automatyzacja przekłada się również na odciążenie specjalistów: deweloper bez głębokiej wiedzy o Kubernetes może uzyskać działający manifest, skupiając się na wysokopoziomowych wymaganiach, podczas gdy szczegółowy kod wygeneruje za niego model. To obniża próg wejścia – zespoły mogą szybciej adoptować technologie chmurowe bez długiego szkolenia z każdego narzędzia.
 
