--- a/docs/tex/5-analiza-porownawcza.tex
+++ b/docs/tex/5-analiza-porownawcza.tex
@@ -2,3 +2,22 @@
 \section{Analiza porównawcza modeli}
 
 TODO
+
+
+
+\textbf{Przykładowe obserwacje i napotkane problemy:}
+Omówienie ogólnego zachowania modeli LLM podczas generacji.
+Analiza typowych problemów napotkanych podczas eksperymentów, takich jak:
+\begin{itemize}
+    \item Ograniczenia długości kontekstu (tokenów),
+    \item Błędy w rozumieniu struktury repozytorium,
+    \item Wpływ długości i precyzji prompta na jakość generacji,
+    \item Deterministyczność generowanych plików,
+    \item Niekonsekwencje w nazwach plików / usług.
+\end{itemize}
+
+\textbf{Wyniki testów:}
+
+\textbf{Analiza porównawcza modeli?:}
+
+\textbf{Wnioski?:}
